--- a/styles/main.css
+++ b/styles/main.css
@@ -12,6 +12,18 @@ body > *{
     margin: 0px;
 
 }
+header img{
+    width: 600px;
+    padding-left: 25%;
+}
+
+nav{
+    margin: -9px;
+    margin-top: -5px;
+    padding: 0.5em;
+    text-transform: uppercase;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
 
 ul {
     top: 200px;
@@ -21,9 +33,10 @@ ul {
 }
 
 ul li {
+    padding-top: 10px;
     width: 100%;
     text-align: center;
-    background-color: red;
+    background-color:#93e8f5;
     color: white;
 }
 
@@ -31,3 +44,12 @@ a {
     text-decoration: none;
     color: white;
 }
+li:hover {
+    background-color: #65a4ad;
+  }
+
+  h1{
+      color: black;
+      text-align: center;
+      padding: 50px;
+  }
